# ruster-env

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-ci.yaml  cargo-release.yaml
src/: banner.rs  lib.rs  main.rs  parser.rs
tests/: cli.rs  parser.rs
